@@ -1,7 +1,4 @@
 AUX misc_opts.patch 2613 RMD160 43311edfe7e877907fa24e9b0ff3b53688246c54 SHA1 a66147b44227df5971b24deb5b32ce07a2ace4b0 SHA256 08d245b130ac04b165d25e45324aab6b47b77e9ac2c1e16d85c06c20d63731a2
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
-DIST kadu-0.6.0.tar.bz2 1583937 RMD160 d53830b98b6485924ad3076694b1db78121b1c2b SHA1 ff5cdd0daa9f9de795cbfe15e163b358a9ee55e2 SHA256 f0e31b5ef00c64cad75a43220842b5564b8ec1dfd0c4481f0f3ac8b88fb9e752
-EBUILD kadu-core-0.6.0-r1.ebuild 3342 RMD160 4e735bf14aab646e3e3bdaafa0dbf515dd623175 SHA1 b4c972759ed98ac2090710749deaefaef61a6b28 SHA256 0a54bc1dd0d97049129d2a1c9c93e84cf5ee87ac32fa637502c182c001a3afc1
 EBUILD kadu-core-0.6.0.1.ebuild 3342 RMD160 4e735bf14aab646e3e3bdaafa0dbf515dd623175 SHA1 b4c972759ed98ac2090710749deaefaef61a6b28 SHA256 0a54bc1dd0d97049129d2a1c9c93e84cf5ee87ac32fa637502c182c001a3afc1
-EBUILD kadu-core-0.6.0.ebuild 3323 RMD160 586de6e5bd8b5491fd2877dc4d33345bb900861a SHA1 97e82361a6adef3f33b63dc81dde1ed28ee1533d SHA256 b76d3e51ed7f588e93fc8ab2b65d6f084542f03d8cf6eb63fa868ccb6541f343
-MISC ChangeLog 718 RMD160 6ae7839c36f5e8f02f1613849d2abb167803ecb5 SHA1 87fcd91aa1eb7bb5e6dfd8a33fa045c2516bf14c SHA256 467ade9cf675178c1597a2ccb2170df6ef97dd92792a7fe638cdf699945be8b2
+MISC ChangeLog 840 RMD160 6cc6e438843abff096a89ac48200a1a8d2806d52 SHA1 15939e4a0d5732deead3f90c181c7a23d13d0c01 SHA256 27589b092af23c11fc3bbae966223fe2e60663e7f422966d37c2b0108b6d02dd
